CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LCSIntersection)
SET (CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE RELAESE)

#SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../libs/linalg)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../catch)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../Eigen)

#IF (ParaView_SOURCE_DIR)
 # INCLUDE_DIRECTORIES(
  #  ${VTK_INCLUDE_DIRS}
  #)
#ELSE (ParaView_SOURCE_DIR)
 # FIND_PACKAGE(ParaView REQUIRED)
 # INCLUDE(${PARAVIEW_USE_FILE})
#ENDIF (ParaView_SOURCE_DIR)

#include( ParaviewPlugins )

if (NOT ParaView_BINARY_DIR)
  find_package(ParaView REQUIRED)
  include(${PARAVIEW_USE_FILE})
endif()

include(ParaViewPlugins)

ADD_PARAVIEW_PLUGIN(LCSIntersection "1.0"
  SERVER_MANAGER_XML LCSIntersection.xml
  SERVER_MANAGER_SOURCES vtkLCSIntersection.cpp vtkLCSIntersection.h
)

##TARGET_COMPILE_DEFINITIONS(RidgeLine PUBLIC UNITTEST=0 CPUEXEC=1)